Fixed navbar to work on Firefox, tweaked map to lign up right

--- a/whatistheplan/static/css/plan.css
+++ b/whatistheplan/static/css/plan.css
@@ -20,7 +20,9 @@
 }
 
 html, body {
-  max-height: 100%;
+  margin: 0;
+  padding: 0;
+  height: 100%;
 }
 
 .bold-italic {
@@ -28,15 +30,19 @@ html, body {
   font-family: 'Source Sans Pro Semibold Italic';
 }
 
+#page-container {
+  min-height:100%;
+  position:relative;
+}
+
 #content-container {
+  padding:10px;
+  padding-bottom:60px;
   width: 100%;
-  min-height: calc(100% - 103px);
+  position: relative;
+  margin: 0px auto;
+  min-height: 100%;
   padding-top: 53px;
-  margin-top: 53px;
-  top: 53px;
-  padding-bottom: 0px
-  bottom: 0;
-  top: 0;
 }
 
 iframe, object, embed {
@@ -86,16 +92,18 @@ a.custom-link {
  background: #333333 !important;
 }
 
+*:before {
+    box-sizing:border-box;
+    -webkit-box-sizing:border-box;
+    -moz-box-sizing:border-box;
+}
+
 /* Bottom navbar */
 #bottom-nav {
+  position: absolute;
+  bottom: 0;
   width: 100%;
   height: 50px;
-  padding-left: 0px;
-  padding-right: 0px;
-  margin-bottom: 0px;
-  left: 0px;
-  right: 0px;
-  bottom: 0;
   background: #333333;
   color: #F3F3F3;
 }
